--- a/index.html
+++ b/index.html
@@ -1,49 +1,15 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>NotifyBF - Raw Script</title>
-  <style>
-    body {
-      background-color: #1e1e1e;
-      color: #d4d4d4;
-      font-family: Consolas, monospace;
-      margin: 0;
-      padding: 20px;
-    }
-
-    .raw-header {
-      font-size: 20px;
-      color: #ffffff;
-      margin-bottom: 15px;
-    }
-
-    .code {
-      white-space: pre;
-      background-color: #2d2d2d;
-      padding: 20px;
-      border-radius: 6px;
-      overflow-x: auto;
-    }
-
-    .footer {
-      margin-top: 20px;
-      font-size: 12px;
-      color: #888;
-    }
-  </style>
+  <title>NotifyBF Script</title>
 </head>
 <body>
 
-  <div class="raw-header">-- NotifyBF Script</div>
+<h2>NotifyBF Script</h2>
 
-  <div class="code">
+<pre>
 loadstring(game:HttpGet("https://pastebin.com/raw/xxxxx"))()
-  </div>
-
-  <div class="footer">
-    © 2025 NotifyBF - Tạo bởi Duy.
-  </div>
+</pre>
 
 </body>
 </html>
