--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NotifyBF Script</title>
+  <title>NotifyBF</title>
 </head>
 <body>
 
-<h2>NotifyBF Script</h2>
-
-<pre>
-loadstring(game:HttpGet("https://pastebin.com/raw/xxxxx"))()
-</pre>
+<pre>loadstring(game:HttpGet("https://pastebin.com/raw/xxxxx"))()</pre>
 
 </body>
 </html>
